# sterling_patern_costmaps

./: .gitignore  CMakeLists.txt  Makefile  README.md  alias.sh  setup.cfg  setup.py  setup.sh  vcs_workspace
config/: params.yaml
docker/: Dockerfile  bash_utils  docker-compose.yaml  entrypoint.sh
launch/: costmaps.launch.py
models/: combined_ahg2_lawn_terrain_rep.pt  cost_head.pt  cost_head_adapted.pt  fpro.pt  fvis.pt  fvis_adapted.pt  upro.pt  uvis.pt  uvis_adapted.pt
src/nodes/: global_costmap_builder.py  local_costmap_builder.py
src/sterling_patern_costmaps/: bev.py  bev_costmap.py  models.py
sterling/: alias.sh  setup.py
sterling/config/: nav2_params.yaml  panther_sim.rviz  params.yaml
sterling/launch/: costmaps.launch.py
sterling/sterling/: bev_costmap.py  train_patern.py
sterling/sterling/nodes/: global_costmap_builder.py  local_costmap_builder.py
sterling_patern_costmaps/: CMakeLists.txt  alias.sh  package.xml  record_bag_sim.sh  setup.py  synchronize_rosbag.py
sterling_patern_costmaps/config/: config.rviz  costmap_common_params.yaml  custom_nodes_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.yaml  map_server_params.yaml  move_base_params.yaml  panther_sim.rviz  params.yaml  robot_state_publisher_params.yaml  slam_toolbox_params.yaml  test_map.pgm
sterling_patern_costmaps/launch/: amcl.launch  costmaps.launch  costmaps.launch.py  launch_turtlebot3.launch  move_base.launch  turtle_nav.launch  turtlebot_gazebo.launch
sterling_patern_costmaps/sterling_patern_costmaps/: bev_costmap.py  convert_costmaps.py  local_costmap_helper.py  models.py  train_patern.py
sterling_patern_costmaps/sterling_patern_costmaps/nodes/: global_costmap_builder.py  local_costmap_builder.py
sterling_patern_costmaps/worlds/: grass_world.world
