<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sterling_patern_costmaps</name>
  <version>0.1.0</version>
  <description>Package for converting sterling/patern output into ROS costmaps</description>
  <maintainer email="asharp@utexas.edu">asharp</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS1 Build and Runtime Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- Test Dependencies -->
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

</package>
