<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sterling_patern_costmaps</name>
  <version>0.1.0</version>
  <description>Package for converting sterling/patern output into ROS costmaps</description>
  <maintainer email="nick.chan@utexas.edu">nchan</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool for ROS1 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies (needed for building the package) -->
  <depend>rospy<depend>
  <depend>nav_msgs<depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <!-- Runtime dependencies -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- Test dependencies -->
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <!-- Export for catkin -->
  <export>
    <!-- No specific exports needed for a Python package -->
  </export>
</package>
